AK - finished navbar dev

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
 <body>
+    <header>
+        <nav>
+            guwehijodkp
+        </nav>
+    </header>
     <script src="./public/js/main.js"></script>
 </body>
 </html>
