--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <header>
         <nav>
-            guwehijodkp
+            cactus
+            <ul>
+                <li>dqw</li>
+                <li>dqwd</li>
+                <li></li>
+                <li></li>
+            </ul>
         </nav>
     </header>
     <script src="./public/js/main.js"></script>
