--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <div>
+            <img src="" alt="">
+        </div>
+    </section>
     <script src="./public/js/main.js"></script>
 </body>
 </html>
