carousel is finish

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <img src="" alt="">
         </div>
     </section>
+    <section>
+        <v-carousel hide-controls>
+            
+        <v-carousel>
+    </section>
     <script src="./public/js/main.js"></script>
 </body>
 </html>
