--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </section>
     <section>
         <v-carousel hide-controls>
-            
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
         <v-carousel>
     </section>
     <script src="./public/js/main.js"></script>
